# opengate

./: .cirrus.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .test072_projection.h5  AUTHORS  CHANGELOG.md  CMakeLists.txt  DesignGuidelines.md  MANIFEST.in  README.md  VERSION  __init__.py  autodoctest.py  fields_test_analytical_B.py  g4DataSetup.py  gam_g4.cpp  mag_field_test.py  phsp_uniform_B.root  pyproject.toml  qt5Setup.py  readme.md  setup.py  test.h5  test066-edep_density.mhd  test066-edep_density.raw  test066-edep_edep.mhd  test066-edep_edep.raw  test066-edep_edep_uncertainty.mhd  test066-edep_edep_uncertainty.raw  test_fields.py
core/: CMakeLists.txt  MANIFEST.in  README.md  out.err  pyproject.toml  setup.py
core/opengate_core/: G4Definitions.py  __init__.py  g4DataSetup.py  geant4_particles.txt  opengate_core.cpp  qt5Setup.py  testsDataSetup.py
core/opengate_core/g4_bindings/: GateConfiguration.h  chemistryadaptator.h  pyG4AffineTransform.cpp  pyG4AssemblyVolume.cpp  pyG4BogackiShampine23.cpp  pyG4BogackiShampine45.cpp  pyG4Box.cpp  pyG4CashKarpRKF45.cpp  pyG4ChordFinder.cpp  pyG4ClassicalRK4.cpp  pyG4Cons.cpp  pyG4DNAChemistryManager.cpp  pyG4DNAScavengerMaterial.cpp  pyG4DNAScavengerProcess.cpp  pyG4DataVector.cpp  pyG4DecayTable.cpp  pyG4DormandPrince745.cpp  pyG4DormandPrinceRK56.cpp  pyG4DormandPrinceRK78.cpp  pyG4ElectricField.cpp  pyG4ElectroMagneticField.cpp  pyG4Element.cpp  pyG4Ellipsoid.cpp  pyG4EmParameters.cpp  pyG4EqMagElectricField.cpp  pyG4EquationOfMotion.cpp  pyG4Event.cpp  pyG4ExactHelixStepper.cpp  pyG4Field.cpp  pyG4FieldManager.cpp  pyG4GenericAnalysisManager.cpp  pyG4GenericBiasingPhysics.cpp  pyG4GeometryManager.cpp  pyG4IInterpolator.cpp  pyG4ITTrackingInteractivity.cpp  pyG4IntersectionSolid.cpp  pyG4IonTable.cpp  pyG4IonisParamMat.cpp  pyG4Ions.cpp  pyG4Isotope.cpp  (+128 more)
core/opengate_core/opengate_lib/: GateARFActor.cpp  GateARFActor.h  GateARFTrainingDatasetActor.cpp  GateARFTrainingDatasetActor.h  GateAcceptanceAngleManager.cpp  GateAcceptanceAngleManager.h  GateAcceptanceAngleSingleVolume.cpp  GateAcceptanceAngleSingleVolume.h  GateAcceptanceAngleTester.cpp  GateAcceptanceAngleTester.h  GateAcceptanceAngleTesterManager.cpp  GateAcceptanceAngleTesterManager.h  GateActorManager.cpp  GateActorManager.h  GateAttenuationImageActor.cpp  GateAttenuationImageActor.h  GateAuxiliaryTrackInformation.h  GateBOptnBremSplitting.cpp  GateBOptnBremSplitting.h  GateBOptrBremSplittingActor.cpp  GateBOptrBremSplittingActor.h  GateBeamQualityActor.cpp  GateBeamQualityActor.h  GateBioDoseActor.cpp  GateBioDoseActor.h  GateChannelSelectiveWrapper.cpp  GateChannelSelectiveWrapper.h  GateChemicalCountingActor.cpp  GateChemicalCountingActor.h  GateChemicalStageActor.cpp  GateChemicalStageActor.h  GateChemistryActor.cpp  GateChemistryActor.h  GateChemistryController.cpp  GateChemistryController.h  GateChemistryLongTimeActor.cpp  GateChemistryLongTimeActor.h  GateChemistryWorld.cpp  GateChemistryWorld.h  GateClusterDoseActor.cpp  (+431 more)
core/opengate_core/opengate_lib/biasing/: GateBremsstrahlungSplittingOptn.cpp  GateBremsstrahlungSplittingOptn.h  GateBremsstrahlungSplittingOptrActor.cpp  GateBremsstrahlungSplittingOptrActor.h  GateChannelXSScalingOptrActor.cpp  GateChannelXSScalingOptrActor.h  GateComptonSplittingFreeFlightOptn.cpp  GateComptonSplittingFreeFlightOptn.h  GateComptonSplittingFreeFlightOptrActor.cpp  GateComptonSplittingFreeFlightOptrActor.h  GateForcedDirectionManager.cpp  GateForcedDirectionManager.h  GateGammaFreeFlightOptn.cpp  GateGammaFreeFlightOptn.h  GateGammaFreeFlightOptrActor.cpp  GateGammaFreeFlightOptrActor.h  GateScatterSplittingFreeFlightOptn.cpp  GateScatterSplittingFreeFlightOptn.h  GateScatterSplittingFreeFlightOptrActor.cpp  GateScatterSplittingFreeFlightOptrActor.h  GateVBiasOptrActor.cpp  GateVBiasOptrActor.h  pyGateBremsstrahlungSplittingOptrActor.cpp  pyGateChannelXSScalingOptrActor.cpp  pyGateComptonSplittingFreeFlightOptrActor.cpp  pyGateGammaFreeFlightOptrActor.cpp  pyGateOptrSplitComptonScatteringActor.cpp  pyGateScatterSplittingFreeFlightOptrActor.cpp  pyGateVBiasOptrActor.cpp
core/opengate_core/opengate_lib/digitizer/: GateCoincidenceSorterActor.cpp  GateCoincidenceSorterActor.h  GateDigiAdderInVolume.cpp  GateDigiAdderInVolume.h  GateDigiAttributeLastProcessDefinedStepInVolume.cpp  GateDigiAttributeLastProcessDefinedStepInVolume.h  GateDigiAttributeLastProcessDefinedStepInVolumeActor.cpp  GateDigiAttributeLastProcessDefinedStepInVolumeActor.h  GateDigiAttributeList.cpp  GateDigiAttributeManager.cpp  GateDigiAttributeManager.h  GateDigiAttributeProcessDefinedStepInVolume.cpp  GateDigiAttributeProcessDefinedStepInVolume.h  GateDigiAttributeProcessDefinedStepInVolumeActor.cpp  GateDigiAttributeProcessDefinedStepInVolumeActor.h  GateDigiCollection.cpp  GateDigiCollection.h  GateDigiCollectionIterator.cpp  GateDigiCollectionIterator.h  GateDigiCollectionManager.cpp  GateDigiCollectionManager.h  GateDigiCollectionsRootManager.cpp  GateDigiCollectionsRootManager.h  GateDigitizerAdderActor.cpp  GateDigitizerAdderActor.h  GateDigitizerBlurringActor.cpp  GateDigitizerBlurringActor.h  GateDigitizerDeadTimeActor.cpp  GateDigitizerDeadTimeActor.h  GateDigitizerEfficiencyActor.cpp  GateDigitizerEfficiencyActor.h  GateDigitizerEnergyWindowsActor.cpp  GateDigitizerEnergyWindowsActor.h  GateDigitizerGaussianBlurringActor.cpp  GateDigitizerGaussianBlurringActor.h  GateDigitizerHitsCollectionActor.cpp  GateDigitizerHitsCollectionActor.h  GateDigitizerPileupActor.cpp  GateDigitizerPileupActor.h  GateDigitizerProjectionActor.cpp  (+34 more)
core/opengate_core/opengate_lib/filters/: GateAttributeComparisonFilter.cpp  GateAttributeComparisonFilter.h  GateAttributeComparisonFilter.txx  GateBooleanFilter.cpp  GateBooleanFilter.h  GateKineticEnergyFilter.cpp  GateKineticEnergyFilter.h  GateParticleFilter.cpp  GatePrimaryScatterFilter.cpp  GatePrimaryScatterFilter.h  GateThresholdAttributeFilter.cpp  GateThresholdAttributeFilter.h  GateVFilter.cpp  (+10 more)
py_geant4/: CMakeLists.txt  geant4.cpp  pyG4RunManager.cpp  pyG4ThreeVector.cpp
(+4327 files in other folders)
